labs/examples/design-patterns-examples/src/com/examples/design/solid/i/good/Manager.java
package com.examples.design.solid.i.good;

public class Manager {
    IWorkable worker;

    public void setWorker(IWorkable w) {
        worker=w;
    }

    public void manage() {
        worker.work();
    }
}
