labs/examples/design-patterns-examples/src/com/examples/design/solid/i/bad/Manager.java
package com.examples.design.solid.i.bad;

class Manager {
    IWorker worker;

    public void setWorker(IWorker w) {
        worker=w;
    }

    public void manage() {
        worker.work();
    }
}
